--- a/package.json
+++ b/package.json
@@ -10,17 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@questlabs/react-sdk": "^2.1.9",
     "@supabase/supabase-js": "^2.39.0",
     "react": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "framer-motion": "^10.16.4",
-    "date-fns": "^2.30.0",
     "recharts": "^2.9.0",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1"
+    "date-fns": "^2.30.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
